kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: gps-tracker-queue
spec:
  selector:
    app: queue

  ports:
    # Accept traffic sent to port 80
    - name: http
      port: 8161
      nodePort: 30010 # this is just required if we choose to keep the type as "NodePort"

    - name: endpoint
      port: 61616

  type: NodePort
