kubernetes/services_aws.yaml
apiVersion: v1
kind: Service
metadata:
  name: gps-tracker-queue
spec:
  selector:
    app: queue

  ports:
    # Accept traffic sent to port 80
    - name: http
      port: 8161
      nodePort: 30010 # this is just required if we choose to keep the type as "NodePort"

    - name: endpoint
      port: 61616

  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: gps-tracker-database
spec:
  selector:
    app: database

  ports:
    - name: endpoint
      port: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: gps-tracker-service
spec:
  selector:
    app: tracker

  ports:
    - port: 8090
      nodePort: 30050

  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: gps-tracker-eureka-server
spec:
  selector:
    app: eureka

  ports:
    - port: 8761
      nodePort: 30040

  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: gps-tracker-api-gateway
spec:
  selector:
    app: gateway

  ports:
    - port: 8080
      name: http
      nodePort: 30030

  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: gps-tracker-webapp
spec:
  selector:
    app: webapp

  ports:
    - port: 80
      name: http
  type: LoadBalancer
