kubernetes/ingress-secured-routing.yaml
# from kubernetes version 1.14
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-secured-routing
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - admin'
spec:
  rules:
    - host: admin.neeraj-eats.com
      http:
        paths:
          - path: /
            backend:
              serviceName: gps-tracker-queue
              servicePort: 8161
